@@ -68,6 +68,7 @@
 			<parameter type="bool" name="showTimeshiftTotal" displaytext="{tr(showTimeshiftTotal)}">1</parameter>
 			<parameter type="bool" name="showDiscUsage" displaytext="{tr(showDiscUsage)}">1</parameter>
 			<parameter type="bool" name="showNumbering" displaytext="{tr(showNumbering)}">1</parameter>
+			<parameter type="bool" name="zaphistoryStatusCol" displaytext="{tr(zaphistoryStatusCol)}">1</parameter>
 		</submenu>
 	</menu>
     <!--
@@ -357,6 +358,11 @@
 		<token name="tr(currentelementsFadeTime)">
 			<trans lang="en_EN">Fade-time infos beside lists</trans>
 			<trans lang="de_DE">Einblendzeit Infos neben Listen</trans>
+		</token>
+		
+		<token name="tr(zaphistoryStatusCol)">
+			<trans lang="en_EN">Show statuscolumn in zayhistory</trans>
+			<trans lang="de_DE">Zeige Statusspalte in zaphistory</trans>
 		</token>
 	</translations>
 </setup>
